client/src/styles.scss
/* You can add global styles to this file, and also import other style files */
@import "primeflex/primeflex.css";
@import "primeicons/primeicons.css";

html,
body {
  margin: 0;
  height: 100%;
  overflow: hidden;
}

app-root {
  display: block;
  height: 100%;
}

.loading-wrapper {
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: center;
}

